--- a/static_files/scheduler/package.json
+++ b/static_files/scheduler/package.json
@@ -23,14 +23,14 @@
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-table": "^8.21.2",
     "autoprefixer": "^10.4.20",
-    "axios": "1.7.9",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "7.2.0",
+    "react-router-dom": "^7.6.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
